<resources>
    <string name="app_name">MAKAR</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <!-- 온보딩 -->
    <string name="skip_button">건너뛰기 ></string>
    <string name="start_button">MAKAR 시작하기</string>

    <!-- 로그인 -->
    <string name="email_hint">이메일</string>
    <string name="password_hint">비밀번호</string>
    <string name="login_button">로그인</string>
    <string name="signup_button">회원가입 ></string>
    <string name="email_empty_toast">이메일을 입력해주세요</string>
    <string name="password_empty_toast">비밀번호를 입력해주세요</string>
    <string name="login_success_toast">성공적으로 로그인하였습니다</string>
    <string name="login_failure_toast">로그인에 실패하였습니다</string>

    <!-- 회원가입 -->
    <string name="tool_bar_signup">회원가입</string>
    <string name="email_text">이메일</string>
    <string name="password_text">비밀번호</string>
    <string name="password_check_text">비밀번호 확인</string>
    <string name="email_signup_hint">이메일을 입력해주세요</string>
    <string name="password_signup_hint">8자 이상의 비밀번호를 입력해주세요</string>
    <string name="password_check_signup_hint">비밀번호 확인</string>
    <string name="signup_confirm_button">가입하기</string>
    <string name="signup_email_error">올바른 이메일 주소를 입력하세요.</string>
    <string name="signup_password_error">8자 이상 입력해주세요</string>
    <string name="signup_password_check_error">비밀번호 확인 실패</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- 자주 가는 역 등록 -->
    <string name="favorite_station_text">자주 가는 역을\n 등록하시겠어요?</string>
    <string name="home_text">집</string>
    <string name="school_text">학교</string>
    <string name="home_station_hint">집 주변 지하철 역을 등록해주세요</string>
    <string name="school_station_hint">학교 주변 지하철 역을 등록해주세요</string>
    <string name="set_favorite_station_confirm_button">수정하기</string>
    <string name="set_favorite_station_toast">자주 가는 역이 등록되었습니다</string>
    <string name="set_favorite_error_toast_1">집 주변 지하철 역을 등록해주세요</string>
    <string name="set_favorite_error_toast_2">학교 주변 지하철 역을 등록해주세요</string>
    <string name="set_favorite_error_toast_3">잠시 후 다시 시도해주세요</string>

    <!-- 막차 알림-->
    <string name="set_alarm_success">막차 알림이 설정되었습니다</string>

    <!-- 하차 알림-->
    <string name="set_getoff_alarm_success">하차 알림이 설정되었습니다</string>

    <!-- 메인화면 -->
    <string name="path_text">경로를 설정해주세요</string>
    <string name="path_root_text">출발역 -> 도착역</string>
    <string name="set_path_text">경로 설정하기</string>
    <string name="time_table_text">시간표</string>

    <string name="modify_path_text">경로 변경하기</string>
    <string name="set_alarm_text">막차 알림 설정하기</string>
    <string name="main_title_text">막차까지 %d분 남았어요!</string>

    <string name="set_route_error_toast_1">출발역을 등록해주세요</string>
    <string name="set_route_error_toast_2">도착역을 등록해주세요</string>
    <string name="set_route_error_toast_3">출발역과 도착역이 일치합니다</string>
    <string name="set_route_error_toast_4">잠시 후 다시 시도해주세요</string>

    <!-- 마이페이지 -->
    <string name="my_info_header_text">내 정보</string>
    <string name="app_info_header_text">앱 정보</string>
    <string name="account_manage_header_text">계정 관리</string>

    <string name="get_off_setting_text">하차 알림 설정</string>
    <string name="favorite_station_setting_text">자주 가는 역 설정</string>
    <string name="favorite_route_setting_text">즐겨찾는 경로 설정</string>
    <string name="terms_of_service_text">서비스 이용약관</string>
    <string name="privacy_policy_text">개인 정보 처리 방침</string>
    <string name="open_source_license_text">오픈소스 라이선스</string>
    <string name="logout_text">로그아웃</string>

    <!-- 다이얼로그 -->
    <string name="close_button">닫기</string>
    <string name="register_button">등록</string>
    <string name="makar_alarm_setting_text">막차 알림 설정하기</string>
    <string name="complete_button">완료</string>
    <string name="get_off_alarm_setting_text">하차 알림 설정하기</string>
    <string name="logout_text_view">로그아웃 하시겠어요?</string>
    <string name="confirm_button">확인</string>
    <string name="cancel_button">취소</string>
    <string name="reset_route_text">경로를\n초기화하시겠습니까?</string>
    <string name="reset_route_toast">경로가 초기화되었습니다"</string>

</resources>