<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="120dp"
    android:paddingRight="20dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/app_logo"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginVertical="13dp"
        android:background="@drawable/login_edittext"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textSize="16dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/login_edittext"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textSize="16dp"/>

    <android.widget.Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:background="@drawable/custom_button"
        android:text="@string/login_button"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/signup_button"
        android:textColor="@color/gray"/>

</LinearLayout>