<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="40dp"
    android:layout_marginBottom="10dp"
    android:orientation="vertical"
    android:background="@drawable/custom_dialog_background"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/logout_text_view"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="14dp">

        <Button
            android:id="@+id/logout_btn"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:background="@drawable/custom_button_main"
            android:text="@string/confirm_button"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_white"
            android:text="@string/cancel_button"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>