<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginStart="40dp"
    android:layout_marginEnd="40dp"
    android:layout_marginBottom="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/makar_alarm_setting_text"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/set_makar_alarm_time_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="10분 전 알림"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:textColor="@color/gray"
        android:textSize="15sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="13dp">

        <Button
            android:id="@+id/cancel_makar_alarm_btn"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_white"
            android:text="@string/cancel_button"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginEnd="15dp"/>

        <Button
            android:id="@+id/set_makar_alarm_btn"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_main"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/complete_button"/>
    </LinearLayout>

</LinearLayout>