<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="60dp"
        android:paddingBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/path_text"
            android:textSize="23sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/path_root_text"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:textSize="15sp"
            android:gravity="center"
            android:background="@drawable/custom_main_textview"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:src="@drawable/app_logo"
            android:layout_marginBottom="20dp"/>
        <!--지하철 이미지 넣을 위치-->

        <android.widget.Button
            android:id="@+id/setRouteBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_path_text"
            android:background="@drawable/custom_button"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginBottom="50dp"
            android:textStyle="bold"/>


        <!--즐겨찾는 경로-->
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            tools:itemCount="5"
            >
        </androidx.recyclerview.widget.RecyclerView>



        <!--최근 경샤-->
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:itemCount="5"/>
        </LinearLayout>

</ScrollView>